--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -19,6 +19,12 @@
         </repository>
     </repositories>
     <dependencies>
+        <!--NBN Gateway API-->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>nbnv-api-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Get the properties reader -->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -31,6 +37,11 @@
             <artifactId>compass</artifactId>
             <version>0.11.7</version>
             <type>gem</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
@@ -46,6 +57,16 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20090211</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
                    
         <dependency>
@@ -72,18 +93,6 @@
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
             <version>${jetty.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
