Adding password to the user object. Allowing the user object to be constructed. Getting the API to link to the portal project. Updating the text in the activation email. Creating some templates for registration to the gateway.

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -9,6 +9,9 @@ sso_token_domain =
 # Define location of Solr Server
 solr_url = http://staging.testnbn.net:7000/solr
 
+# Define location of NBN Gateway Portal
+portal_url = http://localhost:8084
+
 # Define the connection properties for the CORE database
 db_core_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNCore
 db_core_username = NBNImporter
