Creating registration form for validation

--- a/api.model/pom.xml
+++ b/api.model/pom.xml
@@ -32,5 +32,10 @@
             <artifactId>jersey-server-linking</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>
     </dependencies>
 </project>
