--- a/portal/src/main/resources/validation-messages.properties
+++ b/portal/src/main/resources/validation-messages.properties
@@ -1,6 +1,8 @@
+# Define the validation messages for a user
 NotEmpty.user.forename = Please supply a first name
 NotEmpty.user.surname = Please supply a last name
 NotEmpty.user.username = Please supply a username
-Email.user.email = Please supply a valid email address
 NotEmpty.user.phone = Please supply a phone number
 NotEmpty.user.password = Please supply a password
+NotEmpty.user.email = Please supply a valid email address
+Email.user.email = Please supply a valid email address
