--- a/portal/src/test/resources/portal.properties
+++ b/portal/src/test/resources/portal.properties
@@ -1,6 +1,4 @@
-# The following properties file defines the some constants which are available
-# as shared variables to all FreeMarker templates contained in this web 
-# application. These can be server specifically overwritten by creating a file
-# in the folder /server/overload/ with the same file name
-api = http://localhost:8084/api
-gis = http://localhost:8084/nbnv-gis-0.1-SNAPSHOT
+# The following properties file defines the live servers which should be used in 
+# the integration test phase for integration tests.
+api = http://staging.testnbn.net/api
+gis = http://staging.testnbn.net/gis
