persisting a key file for the nbn token authenticator. This can be reused across builds

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -1,7 +1,10 @@
 # The following properties file defines the some constants which are required
 # in order to power some SSO and other aspects of the API project
 
-# Define Signle Sign on defaults
+# Define the location for the Token Autenticator to save its key file
+authenticator_key = /nbnv-settings/api.authenticatorkey
+ 
+# Define Single Sign on defaults
 sso_token_default_ttl = 1209600000
 sso_token_key = nbn.token_key
 sso_token_domain = 
