Adding Credentials reset bean

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -1,8 +1,13 @@
 # The following properties file defines the some constants which are required
 # in order to power some SSO and other aspects of the API project
 
-# Define the location for the Token Autenticator to save its key file
+# Define the location for the Token Autenticator and Credentials Reset key
+# to save its key file.
+#
+# WARNING : Make sure that these files are distinct below, otherwise the tokens
+# will be readable by each token generator
 authenticator_key = /nbnv-settings/api.authenticatorkey
+reset_key = /nbnv-settings/api.resetcredentialskey
  
 # Define Single Sign on defaults
 sso_token_default_ttl = 1209600000
