Adding password/username reset functionality ui

--- a/portal/src/main/resources/validation-messages.properties
+++ b/portal/src/main/resources/validation-messages.properties
@@ -6,3 +6,7 @@ NotEmpty.user.phone = Please supply a phone number
 NotEmpty.user.password = Please supply a password
 NotEmpty.user.email = Please supply a valid email address
 Email.user.email = Please supply a valid email address
+
+Email.recoveryRequest.email = Please supply a valid email address
+NotEmpty.recoveryRequest.email = Please supply a valid email address
+NotEmpty.recoveryRequest.forgotten = Please select what you have forgotten
