--- a/importer.grin/src/main/resources/settings.properties
+++ b/importer.grin/src/main/resources/settings.properties
@@ -1,7 +1,7 @@
 
 # this is a comment
 
-javax.persistence.jdbc.url=jdbc:sqlserver://sql-spatial;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-master;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
