--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -21,12 +21,12 @@ solr_url = http://staging.testnbn.net:7000/solr
 portal_url = http://localhost:8084
 
 # Define the connection properties for the CORE database
-db_core_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNCore
+db_core_url = jdbc:sqlserver://nbnsql-a.nerc-lancaster.ac.uk;databaseName=NBNCore
 db_core_username = NBNImporter
 db_core_password = Ecowaswashere9
 
 # Define the connection properties for the WAREHOUSE database
-db_warehouse_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
+db_warehouse_url = jdbc:sqlserver://nbnsql-a.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
 db_warehouse_username = NBNImporter
 db_warehouse_password = Ecowaswashere9
 
