--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -152,5 +152,8 @@
             </plugin>
         </plugins>
     </build>
+    <properties>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
+    </properties>
 </project>
 
