--- a/imt/pom.xml
+++ b/imt/pom.xml
@@ -181,5 +181,8 @@
             </plugin>
         </plugins>
     </build>
+    <properties>
+        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
+    </properties>
 </project>
 
