NBNV-295 removed geographical tab from dataset metadata for site boundary and habitat, all now have link to imt with dataset turned on

--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -2,7 +2,7 @@
 # in order to power some of the maps defined in this gis project
 mapserver = http://localhost/fcgi-bin/mapserv.exe
 api = http://localhost:8084/api
-spatialConnection = Server=NBNSQL-A;Database=NBNWarehouse;uid=NBNGIS;pwd=ForgottenWindGasClock25;Integrated Security=True
+spatialConnection = Server=NBNSQL-B;Database=NBNWarehouse;uid=NBNGIS;pwd=ForgottenWindGasClock25;Integrated Security=True
 ordnanceSurveyAllowedReferrerPrefix = http://localhost:8084/
 contextLayersLocation = E:
 
