--- a/portal/src/main/resources/portal.properties
+++ b/portal/src/main/resources/portal.properties
@@ -4,3 +4,4 @@
 # in the folder /server/overload/ with the same file name
 api = http://localhost:8084/api
 gis = http://localhost:8084/nbnv-gis-0.1-SNAPSHOT
+imt = nbnv-imt-0.1-SNAPSHOT
