removed imt portal property from taxa landing page and pickers

--- a/portal/src/main/resources/portal.properties
+++ b/portal/src/main/resources/portal.properties
@@ -3,5 +3,4 @@
 # application. These can be server specifically overwritten by creating a file
 # in the folder /server/overload/ with the same file name
 api = http://localhost:8084/api
-gis = http://localhost:8084/nbnv-gis-0.1-SNAPSHOT
-imt = nbnv-imt-0.1-SNAPSHOT
+gis = http://localhost:8084/gis
