--- a/importer/src/main/resources/importer.properties
+++ b/importer/src/main/resources/importer.properties
@@ -1,4 +1,4 @@
-javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
