--- a/importer/src/test/resources/importer.properties
+++ b/importer/src/test/resources/importer.properties
@@ -1,7 +1,7 @@
 
 # this is a comment
 
-javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 
