Started transition to using spring javaconfig.

--- a/portal/src/main/resources/portal.properties
+++ b/portal/src/main/resources/portal.properties
@@ -2,5 +2,5 @@
 # as shared variables to all FreeMarker templates contained in this web 
 # application. These can be server specifically overwritten by creating a file
 # in the folder /server/overload/ with the same file name
-api = http://localhost:8084/api
+api = http://staging.testnbn.net/api
 gis = http://localhost:8084/gis
