--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -75,9 +75,14 @@
         </dependency>
                    
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+	</dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>7.0.32</version>
             <scope>provided</scope>
         </dependency>
         
