--- a/crud.importstaging/pom.xml
+++ b/crud.importstaging/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>eclipselink</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
