--- a/importer/src/main/resources/coreDb.properties
+++ b/importer/src/main/resources/coreDb.properties
@@ -1,4 +1,5 @@
 javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
+my.test.setting=don't-delete-this
 
