--- a/importer/src/main/resources/stagingDb.properties
+++ b/importer/src/main/resources/stagingDb.properties
@@ -1,3 +1,4 @@
 javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-master.nerc-lancaster.ac.uk;databaseName=NBNImportStaging
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
+my.test.setting=don't-delete-this
