--- a/portal/src/main/webapp/WEB-INF/web.xml
+++ b/portal/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
     
 <!--Define custom error pages -->
     <error-page>
+        <error-code>401</error-code>
+        <location>/unavailable-pages/401</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
         <location>/unavailable-pages/404</location>
     </error-page>
