--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -15,7 +15,7 @@
     <repositories>
         <repository>
             <id>rubygems-releases</id>
-            <url>http://mavenrepo.nerc-lancaster.ac.uk/nexus/content/repositories/RubyGems</url>
+            <url>http://rubygems-proxy.torquebox.org/releases</url>
         </repository>
     </repositories>
     <dependencies>
