User Role Modification / Removing Users from organisation / direct user add, now work correctly

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -21,7 +21,7 @@ solr_url = http://staging.testnbn.net:7000/solr
 portal_url = http://localhost:8084
 
 # Define the connection properties for the CORE database
-db_core_url = jdbc:sqlserver://nbnsql-b.nerc-lancaster.ac.uk;databaseName=NBNCore
+db_core_url = jdbc:sqlserver://nbnsql-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 db_core_username = NBNImporter
 db_core_password = Ecowaswashere9
 
