--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -73,7 +73,11 @@
             <artifactId>gt2-referencing</artifactId>
             <version>${geotools2.version}</version>
         </dependency>
-
+        <!--<dependency>-->
+            <!--<groupId>javax.el</groupId>-->
+            <!--<artifactId>el-api</artifactId>-->
+            <!--<version>2.2.1-b04</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
