--- a/api/src/main/webapp/WEB-INF/web.xml
+++ b/api/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,10 @@
             <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
             <param-value>com.sun.jersey.server.linking.LinkFilter;uk.org.nbn.nbnv.api.rest.filters.JsonpResponseFilter</param-value>
         </init-param>
+        <init-param>
+            <param-name>com.sun.jersey.config.property.WadlGeneratorConfig</param-name>
+            <param-value>uk.org.nbn.nbnv.api.doc.ExtendedWADLGeneratorConfig</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     
