*Upgrade to scala 2.10.0 *Changes to NBNV-61 validator  due to speed issues

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <name>${project.artifactId}-${project.version}</name>
 
     <properties>
-        <scala.version>2.9.3</scala.version>
+        <scala.version>2.10.0</scala.version>
+        <!--<scala.version>2.9.3</scala.version>-->
         <jersey.version>1.15</jersey.version>
         <spring.version>3.1.1.RELEASE</spring.version>
         <jetty.version>6.1.26</jetty.version>
