--- a/api/pom.xml
+++ b/api/pom.xml
@@ -266,5 +266,10 @@
             <artifactId>mybatis-oscache</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.2.1</version>
+        </dependency>
     </dependencies>
 </project>
