--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -34,3 +34,4 @@ db_warehouse_password = Ecowaswashere9
 email_host = smtp.nerc-lancaster.ac.uk
 email_port = 25
 email_from = NBNGateway@nbn.org.uk
+email_mode = dev
