Added a patched link filter to remove problem with some downloads (Declarative Linking problem), basically doesn't check if the response is a streamingOutput
Fixed Attributes so that should now be included correctly and not repeated over and over again for the number of records present (needs performance checks as well).

--- a/api/src/main/webapp/WEB-INF/web.xml
+++ b/api/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-            <param-value>com.sun.jersey.server.linking.LinkFilter;uk.org.nbn.nbnv.api.rest.filters.JsonpResponseFilter</param-value>
+            <param-value>uk.org.nbn.nbnv.api.rest.filters.PatchedLinkFilter;uk.org.nbn.nbnv.api.rest.filters.JsonpResponseFilter</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.config.property.WadlGeneratorConfig</param-name>
