--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
 	<!-- nbn solution -->
@@ -35,7 +33,8 @@
         <module>documentation</module>
         <module>gis</module>
         <module>importer.orglogo</module>
-    </modules>
+    <module>reporter-mail</module>
+  </modules>
 	
     <build>
         <pluginManagement>
@@ -133,4 +132,3 @@
         </pluginRepository>
     </pluginRepositories>
 </project>
-
