--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -19,6 +19,12 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        
         <!--NBN Gateway API-->
         <!-- Get the properties reader -->
         <dependency>
