Some changes to the nomenclature of source folders to suite graham

--- a/config/importerService/NBNImporterPollingService/App.config
+++ b/config/importerService/NBNImporterPollingService/App.config
@@ -5,7 +5,7 @@
     </startup>
     <appSettings>
       <add key="ImporterCommandLine" value="C:\Working\servicetest\importer\importer.jar %importfile% -logdir %logfolder% -tempdir %tempfolder% -mode %mode% -target ingest"/>
-      <add key="UpdatesFolder" value="C:\Working\servicetest\updatefiles"/>
+      <add key="NewOrReplaceFolder" value="C:\Working\servicetest\updatefiles"/>
       <add key="AppendsFolder" value="C:\Working\servicetest\appendfiles"/>
       <add key="ImporterLogFolder" value="C:\Working\servicetest\log"/>
       <add key="ResultFolder" value="C:\Working\servicetest\complete"/>
