--- a/importer.grin/src/main/resources/settings.properties
+++ b/importer.grin/src/main/resources/settings.properties
@@ -1,7 +1,3 @@
-
-# this is a comment
-
-javax.persistence.jdbc.url=jdbc:sqlserver://nbnsql-b;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
-
