--- a/importer.grin/src/test/resources/settings.properties
+++ b/importer.grin/src/test/resources/settings.properties
@@ -1,7 +1,6 @@
 
 # this is a comment
 
-javax.persistence.jdbc.url=jdbc:sqlserver://sql-spatial;databaseName=NBNCore
+javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
-
