--- a/portal/src/main/resources/portal.properties
+++ b/portal/src/main/resources/portal.properties
@@ -5,3 +5,6 @@
 #api = http://staging.testnbn.net/api
 api = http://localhost:8084/api
 gis = http://localhost:8084/gis
+
+gaProp = UA-1444605-6
+gauProp = UA-1444605-5
