--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>gis</module>
         <module>importer.orglogo</module>
         <module>reporter-mail</module>
+        <module>recordcleaner</module>
     </modules>
 	
     <build>
