pointed solution at nbn-b rather then nbnwarehouse because this does not appear to work from jncc network

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -26,7 +26,7 @@ db_core_username = NBNAPI
 db_core_password = SingLikeTieBarn2013
 
 # Define the connection properties for the WAREHOUSE database
-db_warehouse_url = jdbc:sqlserver://nbnwarehouse.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
+db_warehouse_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
 db_warehouse_username = NBNAPI
 db_warehouse_password = SingLikeTieBarn2013
 
