--- a/gis/src/main/resources/gis.properties
+++ b/gis/src/main/resources/gis.properties
@@ -2,7 +2,7 @@
 # in order to power some of the maps defined in this gis project
 mapserver = http://localhost/fcgi-bin/mapserv.exe
 api = http://localhost:8084/api
-spatialConnection = Server=nbnwarehouse.nerc-lancaster.ac.uk;Database=NBNWarehouse;uid=NBNGIS;pwd=MoreSilenceCookOver2013;Integrated Security=True;GeometryFormat=native
+spatialConnection = Server=nbn-b.nerc-lancaster.ac.uk;Database=NBNWarehouse;uid=NBNGIS;pwd=MoreSilenceCookOver2013;Integrated Security=True;GeometryFormat=native
 ordnanceSurveyAllowedReferrerPrefix = http://localhost:8084/
 contextLayersLocation = E:
 
