--- a/api/pom.xml
+++ b/api/pom.xml
@@ -75,7 +75,7 @@
         </plugins>
     </build>
         
-    <dependencies>       
+    <dependencies>                  
         <!--NBN Gateway API-->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -219,8 +219,8 @@
         <!--Logging-->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.6.6</version>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
         </dependency>
         
         <!--Servlet API-->
