Fixed the org logo importer a bit so it actually works, added in the example structure of the control file

--- a/importer.orglogo/pom.xml
+++ b/importer.orglogo/pom.xml
@@ -48,7 +48,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>com.jncc.old.OLD</mainClass>
+                                    <mainClass>uk.org.nbn.importer.orglogo.OLD</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
