--- a/importer.orglogo/src/main/java/uk/org/nbn/importer/orglogo/config.properties
+++ b/importer.orglogo/src/main/java/uk/org/nbn/importer/orglogo/config.properties
@@ -1,4 +1,5 @@
-database = nbnsql-master.nerc-lancaster.ac.uk
+url = nbn-master.nerc-lancaster.ac.uk
+database = NBNCore
 port = 1433
-#username = 
-#password = 
+username = 
+password = 
