Did some tweaking to the log4j config to include a useful timestamp

--- a/api/src/main/resources/log4j.properties
+++ b/api/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number. (basically, format of log)
-log4j.appender.stdout.layout.ConversionPattern= %5p %d{HH:mm:ss.SSS} [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern= %5p %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] (%F:%L) - %m%n
 
 # THIS IS WHERE YOU WILL HAVE ALL THE LOG WRITTEN
 #log4j.appender.R=org.apache.log4j.RollingFileAppender
