#nbnv-785 Implemented mechanism to call web services using

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -73,6 +73,16 @@
             <artifactId>gt2-referencing</artifactId>
             <version>${geotools2.version}</version>
         </dependency>
+		<dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
