--- a/importer/src/main/resources/importer.properties
+++ b/importer/src/main/resources/importer.properties
@@ -1,4 +1,5 @@
 javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
+api.url=http://localhost:8084/api
 
