#nbnv-785 Fixed some bugs in the api calls and tested

--- a/api/src/main/resources/api.properties
+++ b/api/src/main/resources/api.properties
@@ -21,9 +21,9 @@ solr_url = http://staging.testnbn.net:7000/solr
 portal_url = http://localhost:8084
 
 # Define the connection properties for the CORE database
-db_core_url = jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=NBNCore
-db_core_username = NBNAPI
-db_core_password = SingLikeTieBarn2013
+db_core_url = jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
+db_core_username = NBNTestAPI
+db_core_password = 2013Amarrcruiser
 
 # Define the connection properties for the WAREHOUSE database
 db_warehouse_url = jdbc:sqlserver://nbn-b.nerc-lancaster.ac.uk;databaseName=NBNWarehouse
