#nbnv-785 - set the api user and password

--- a/importer/src/main/resources/importer.properties
+++ b/importer/src/main/resources/importer.properties
@@ -2,4 +2,7 @@ javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;data
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
 api.url=http://localhost:8084/api
+api.user=nbn_sysadmin
+api.password=Pink_Camel_Rain_2013
+
 
