--- a/importer/src/test/resources/importer.properties
+++ b/importer/src/test/resources/importer.properties
@@ -7,3 +7,5 @@ javax.persistence.jdbc.user=NBNImporter
 
 my.test.setting=don't-delete-this
 api.url=http://localhost:8084/api
+api.user=nbn_sysadmin
+api.password=Pink_Camel_Rain_2013
