#nbnv-825 - swapped out jersey-client and json references in pom for jersey-bundle

--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -73,14 +73,9 @@
             <artifactId>gt2-referencing</artifactId>
             <version>${geotools2.version}</version>
         </dependency>
-		<dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>${jersey.version}</version>
-        </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-client</artifactId>
+            <artifactId>jersey-bundle</artifactId>
             <version>${jersey.version}</version>
         </dependency>
     </dependencies>
