--- a/importer/src/main/resources/importer.properties
+++ b/importer/src/main/resources/importer.properties
@@ -1,8 +1,9 @@
 javax.persistence.jdbc.url=jdbc:sqlserver://nbn-master.nerc-lancaster.ac.uk;databaseName=TestNBNCore
 javax.persistence.jdbc.password=Ecowaswashere9
 javax.persistence.jdbc.user=NBNImporter
-api.url=http://localhost:8084/api
-api.user=nbn_sysadmin
+api.url=https://staging-data.nbn.org.uk/api
+#api.url=http://localhost:8084/api
+api.user=nbnsysadmin
 api.password=Pink_Camel_Rain_2013
 
 
