--- a/importer/src/test/resources/importer.properties
+++ b/importer/src/test/resources/importer.properties
@@ -9,5 +9,5 @@ my.test.setting=don't-delete-this
 
 #api.url=https://staging-data.nbn.org.uk/api
 api.url=http://localhost:8084/api
-api.user=nbn_sysadmin
+api.user=nbnsysadmin
 api.password=Pink_Camel_Rain_2013
